# Raytracingc-

./: .gitignore  Build.sh  CMakeLists.txt  README.md
.cache/clangd/index/: 3D-types.h.5AEAAB4BD7D02DBB.idx  main.cpp.CF7F64FB8A4D0D56.idx  object-importer.cpp.49CC44902125328E.idx  object-importer.h.6624DCCA6649B499.idx  stb_image.h.AF782143B0ECC358.idx  stb_image_write.h.30721B74134EFD42.idx  xsimd.hpp.BD5808D92CF3DC7A.idx  xsimd_aligned_allocator.hpp.6DE50C77C931D281.idx  xsimd_alignment.hpp.BF74F449CD283C28.idx  xsimd_all_registers.hpp.2C59460F62055BF9.idx  xsimd_api.hpp.9CEC5EA9C4B209CD.idx  xsimd_arch.hpp.0053FE44D082BB97.idx  xsimd_avx2_register.hpp.5323CBDC49A86C48.idx  xsimd_avx512bw_register.hpp.C8A110064B185B24.idx  xsimd_avx512cd_register.hpp.E1D4B7162C98B195.idx  xsimd_avx512dq_register.hpp.2E839AB112F0BC93.idx  xsimd_avx512er_register.hpp.ADEF88763F8FDEF7.idx  xsimd_avx512f_register.hpp.CC991E618420FAC8.idx  xsimd_avx512ifma_register.hpp.573F7AE7FE7A3EF9.idx  xsimd_avx512pf_register.hpp.5384DEBBE8C97166.idx  xsimd_avx512vbmi2_register.hpp.01A3FDD057A28671.idx  xsimd_avx512vbmi_register.hpp.0CD0D14744E34090.idx  xsimd_avx512vnni_avx512bw_register.hpp.8B37A85A9255846A.idx  xsimd_avx512vnni_avx512vbmi2_register.hpp.E19671BA4D8D3F82.idx  xsimd_avx_register.hpp.000E931B80D34FAC.idx  xsimd_avxvnni_register.hpp.7A62A506F3F9ED52.idx  xsimd_batch.hpp.38822639D8063BE8.idx  xsimd_batch_constant.hpp.47136124D53555E7.idx  xsimd_common.hpp.EF4F38A28F106915.idx  (+36 more)
include/: 3D-types.h  object-importer.h
src/: main.cpp  object-importer.cpp
